finally figured out how to fix nav bar spacing

--- a/mystyle.css
+++ b/mystyle.css
@@ -10,7 +10,7 @@ body
 	padding:10%;
 	padding-bottom:10%;
 	margin-bottom: 0px;
-  	margin-top: 0px;
+  	margin-top: 50px;
 	color: white;
 }
 
